--- a/goagent/proxy.sample.ini
+++ b/goagent/proxy.sample.ini
@@ -98,6 +98,7 @@ talkx.l.google.com =
 ; upload.youtube.com = google_hk
 
 [ipv6/http]
+dns = 2001:4860:4860::8888|2001:4860:4860::8844|2001:470:20::2
 crlfsites = .youtube.com|.google.com
 withgae = play.google.com
 forcehttps = code.google.com|groups.google.com|docs.google.com
@@ -131,7 +132,7 @@ password =
 
 [autorange]
 hosts = *.c.youtube.com|*.atm.youku.com|*.googlevideo.com|*av.vimeo.com|smile-*.nicovideo.jp|video.*.fbcdn.net|s*.last.fm|x*.last.fm|*.x.xvideos.com|*.edgecastcdn.net|*.d.rncdn3.com|cdn*.public.tube8.com|videos.flv*.redtubefiles.com|cdn*.public.extremetube.phncdn.com|cdn*.video.pornhub.phncdn.com|*.mms.vlog.xuite.net|vs*.thisav.com|archive.rthk.hk|video*.modimovie.com|*.c.docs.google.com
-endswith = .f4v|.flv|.hlv|.m4v|.mp4|.mp3|.ogg|.avi|.exe|.zip|.iso|.rar|.bz2|.xz|.dmg
+endswith = .iso|.dmg
 noendswith = .xml|.json|.html|.php|.py|.js|.css|.jpg|.jpeg|.png|.gif|.ico|.webp
 threads = 3
 maxsize = 1048576
