--- a/version.ini
+++ b/version.ini
@@ -1,13 +1,13 @@
 [Update]
 lastupdate = 0
-fgfw-lite-cloud.txt = "d6c0772b6134815e97542458962ca4b9"
-userconf.sample.ini = "fb2bdb578acae20ccb899f942f525217"
-readme.md = "8ebad3058dc007e01a8afde95ec27ff6"
-python27-python27.zip = "6a0c7580de1386785dfe8608abac5f47"
-fgfw-lite-encrypt.py = "85379db7562a32c7a8217f3d8dd0d3c1"
-goagent-proxy.py = "329c50be9467854f867439dda967228d"
-goagent-proxy.sample.ini = "6028e11a6137c653d4b028d843983d89"
-goagent-cacert.pem = "770a51ab7556943f4afd0c15393895ab"
-fgfw-lite-gfwlist.txt = "2225//trunk/gfwlist.txt"
-fgfw-lite-fgfw-lite.py = "d154ab6f090823619cac9d12dac35f23"
+fgfw-lite-cloud.txt = None
+userconf.sample.ini = None
+readme.md = None
+python27-python27.zip = None
+fgfw-lite-encrypt.py = None
+goagent-proxy.py = None
+goagent-proxy.sample.ini = None
+goagent-cacert.pem = None
+fgfw-lite-gfwlist.txt = "2233//trunk/gfwlist.txt"
+fgfw-lite-fgfw-lite.py = None
 
