--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -17,6 +17,9 @@ gaeappid = mzu5gx1heh2beebo2|niif7q7hukk3|niif7q7hukk3k
 gaepassword = heh2beebo2
 mode = https
 profile = auto
+google_cn = 
+google_hk = 
+keepalive =
 obfuscate = 0
 validate = 0
 options =
