--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -9,16 +9,17 @@ enable = 1
 listen = 127.0.0.1:8118
 enable_gfwlist = 1
 region = cn
-parentproxy = 
+parentproxy =
 
 [goagent]
 enable = 1
 gaeappid = mzu5gx1heh2beebo2|niif7q7hukk3|niif7q7hukk3k
 gaepassword = heh2beebo2
+sslversion =
 mode = https
-profile = auto
-google_cn = 
-google_hk = 
+profile =
+google_cn =
+google_hk =
 keepalive =
 obfuscate = 0
 validate = 0
@@ -29,7 +30,7 @@ phppassword =
 [snova]
 enable = 0
 C4worknodes =
-RC4Key = 8976501f8451f03c5c4067b47882f2e5
+RC4Key =
 
 [parents]
 ; sslproxy_0 = https://user:pass@hostname:443
