--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -7,7 +7,7 @@ branch = master
 [fgfwproxy]
 enable = 1
 listen = 127.0.0.1:8118
-enable_gfwlist = 1
+gfwlist = 1
 region = cn
 parentproxy =
 maxretry = 4
