--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -35,8 +35,8 @@ C4worknodes =
 RC4Key =
 
 [parents]
+shadowsocks = ss://aes-128-cfb:6Rc59g0jFlTppvel@155.254.32.50:8000
 ; sslproxy_0 = https://user:pass@hostname:443
-; shadowsocks_0 = ss://method:password@hostname:port
 
 [hosts]
 ; www.baidu.com = 127.0.0.1
