--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -35,7 +35,7 @@ C4worknodes =
 RC4Key =
 
 [parents]
-shadowsocks = ss://aes-128-cfb:6Rc59g0jFlTppvel@155.254.32.50:8000
+shadowsocks_0 = ss://aes-128-cfb:6Rc59g0jFlTppvel@155.254.32.50:8000
 ; sslproxy_0 = https://user:pass@hostname:443
 
 [hosts]
