--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -36,7 +36,7 @@ C4worknodes =
 RC4Key =
 
 [parents]
-shadowsocks_0 = ss://aes-128-cfb:6Rc59g0jFlTppvel@155.254.32.50:8000
+shadowsocks_0 = ss://aes-128-cfb:6Rc59g0jFlTppvel@us06.c2tqh6xgh96.tk:8000
 ; sslproxy_0 = https://user:pass@hostname:443
 
 [hosts]
