--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -16,7 +16,7 @@ maxretry = 4
 
 [goagent]
 enable = 1
-gaeappid = mzu5gx1heh2beebo2|niif7q7hukk3|niif7q7hukk3k
+gaeappid = c2tqh6xgh96|mzu5gx1heh2beebo2|niif7q7hukk3|niif7q7hukk3k
 gaepassword = heh2beebo2
 sslversion =
 mode = https
