--- a/goagent/proxy.sample.ini
+++ b/goagent/proxy.sample.ini
@@ -66,8 +66,8 @@ talkx.l.google.com = google_talk
 .dropbox.com:443 = direct
 .box.com:443 = direct
 .copy.com:443 = direct
-https?://www\.google\.com/(?:imgres|url)\?.*url=([^&]+) = $1
-https?://www\.google\.com\.hk/(?:imgres|url)\?.*url=([^&]+) = $1
+; https?://www\.google\.com/(?:imgres|url)\?.*url=([^&]+) = $1
+; https?://www\.google\.com\.hk/(?:imgres|url)\?.*url=([^&]+) = $1
 ; https?://www\.example\.com/.+\.html = file:///C:/README.txt
 ; https?://www\.google\.com(\.[a-z]{2})?/($|(search|url|gen_204)\?|(complete|images)/) = google_cn
 ; https?://www\.youtube\.com/watch = google_hk
