--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -39,6 +39,7 @@ RC4Key =
 [parents]
 shadowsocks_0 = ss://aes-128-cfb:6Rc59g0jFlTppvel@155.254.32.50:8000
 ; sslproxy_0 = https://user:pass@hostname:443
+; sniproxy = sni://hostname:port
 
 [hosts]
 ; www.baidu.com = 127.0.0.1
