--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -18,13 +18,16 @@ maxretry = 4
 enable = 1
 gaeappid = c2tqh6xgh96|mzu5gx1heh2beebo2|niif7q7hukk3|niif7q7hukk3k
 gaepassword = heh2beebo2
-sslversion =
 mode = https
-profile =
-pagespeed = 
+ipv6 =
+sslversion =
+keepalive =
+obfuscate =
+pagespeed =
+validate =
 google_cn =
 google_hk =
-keepalive =
+
 obfuscate = 0
 validate = 1
 options =
