--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -29,7 +29,6 @@ pagespeed =
 validate =
 google_cn =
 google_hk =
-
 obfuscate = 0
 validate = 1
 options =
@@ -47,4 +46,4 @@ shadowsocks_0 = ss://aes-128-cfb:6Rc59g0jFlTppvel@155.254.32.50:8000
 ; sniproxy = sni://hostname:port
 
 [hosts]
-; www.baidu.com = 127.0.0.1
+www.yyets.com = 27.255.82.19
