--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -43,7 +43,7 @@ C4worknodes =
 RC4Key =
 
 [parents]
-shadowsocks_0 = ss://aes-128-cfb:6Rc59g0jFlTppvel@155.254.32.50:8000
+shadowsocks_0 = ss://aes-128-cfb:6Rc59g0jFlTppvel@us03.fwlite.tk:8000
 ; sslproxy_0 = https://user:pass@hostname:443
 ; sniproxy = sni://hostname:port
 
