update goagent conf

--- a/goagent/proxy.sample.ini
+++ b/goagent/proxy.sample.ini
@@ -33,7 +33,6 @@ google_talk = talk.google.com|talk.l.google.com|talkx.l.google.com
 play.google.com = withgae
 wenda.google.com.hk = withgae
 clients.google.com = withgae
-clients1.google.com = withgae
 scholar.google.com = nocrlf,noforcehttps,nofakehttps
 scholar.google.com.hk = nocrlf,noforcehttps,nofakehttps
 scholar.google.com.cn = nocrlf,noforcehttps,nofakehttps
@@ -45,7 +44,7 @@ talk.l.google.com = google_talk
 talkx.l.google.com = google_talk
 .google.cn = google_cn
 .appspot.com = google_hk,crlf
-.google.com = google_hk,forcehttps,fakehttps
+.google.com = google_hk,fakehttps
 .google.com.hk = google_hk,forcehttps,fakehttps
 .commondatastorage.googleapis.com = withgae
 .googleapis.com = google_hk,forcehttps,fakehttps
