--- a/goagent/proxy.sample.ini
+++ b/goagent/proxy.sample.ini
@@ -32,7 +32,8 @@ google_talk = talk.google.com|talk.l.google.com|talkx.l.google.com
 [profile]
 play.google.com = withgae
 wenda.google.com.hk = withgae
-clients.google.com = withgae
+clients.google.com = withgae,noforcehttps
+.clients.google.com = withgae,noforcehttps
 scholar.google.com = nocrlf,noforcehttps,nofakehttps
 scholar.google.com.hk = nocrlf,noforcehttps,nofakehttps
 scholar.google.com.cn = nocrlf,noforcehttps,nofakehttps
