--- a/goagent/proxy.sample.ini
+++ b/goagent/proxy.sample.ini
@@ -34,10 +34,10 @@ play.google.com = withgae
 wenda.google.com.hk = withgae
 clients.google.com = withgae,noforcehttps
 .clients.google.com = withgae,noforcehttps
-scholar.google.com = nocrlf,noforcehttps,nofakehttps
-scholar.google.com.hk = nocrlf,noforcehttps,nofakehttps
-scholar.google.com.cn = nocrlf,noforcehttps,nofakehttps
-books.google.com.hk = nocrlf,noforcehttps,nofakehttps
+scholar.google.com = google_cn,nocrlf,noforcehttps,nofakehttps
+scholar.google.com.hk = google_cn,nocrlf,noforcehttps,nofakehttps
+scholar.google.com.cn = google_cn,nocrlf,noforcehttps,nofakehttps
+books.google.com.hk = google_cn,nocrlf,noforcehttps,nofakehttps
 webcache.googleusercontent.com = crlf,noforcehttps,nofakehttps
 mtalk.google.com = direct
 talk.google.com = google_talk
@@ -45,7 +45,7 @@ talk.l.google.com = google_talk
 talkx.l.google.com = google_talk
 .google.cn = google_cn
 .appspot.com = google_hk,crlf
-.google.com = google_hk,fakehttps
+.google.com = google_hk,forcehttps,fakehttps
 .google.com.hk = google_hk,forcehttps,fakehttps
 .commondatastorage.googleapis.com = withgae
 .googleapis.com = google_hk,forcehttps,fakehttps
@@ -53,8 +53,8 @@ talkx.l.google.com = google_talk
 .googletagservices.com = google_hk,forcehttps,fakehttps
 .googletagmanager.com = google_hk,forcehttps,fakehttps
 .google-analytics.com = google_cn,forcehttps,fakehttps
-.gstatic.com = google_hk,fakehttps
-.ggpht.com = google_hk,fakehttps
+.gstatic.com = google_hk,forcehttps,fakehttps
+.ggpht.com = google_hk,forcehttps,fakehttps
 .googlegroups.com = google_hk,forcehttps,fakehttps
 .googlecode.com = google_hk,forcehttps,fakehttps
 .youtube.com = forcehttps,fakehttps
