--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -9,12 +9,12 @@ logfile =
 enable = 1
 listen = 127.0.0.1:8118
 gfwlist = 1
-xheaders = 0
+xheaders =
 region = cn
-profile = 134
+profile =
 parentproxy =
 maxretry = 4
-timeout = 4
+timeout =
 remoteapi = 0
 rproxy =
 
