update goagent handler

--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -34,8 +34,7 @@ google_hk =
 obfuscate = 0
 validate = 1
 options =
-phpfetchserver =
-phppassword =
+vps =
 
 [parents]
 shadowsocks_0 = ss://aes-128-cfb:6Rc59g0jFlTppvel@155.254.32.50:8000
