--- a/goagent/proxy.sample.ini
+++ b/goagent/proxy.sample.ini
@@ -36,6 +36,7 @@ wenda.google.com.hk = withgae
 clients.google.com = withgae,noforcehttps
 .clients.google.com = withgae,noforcehttps
 clients1.google.com = withgae,noforcehttps
+translate.google.com = withgae,noforcehttps
 scholar.google.com = google_cn,nocrlf,noforcehttps,nofakehttps
 scholar.google.com.hk = google_cn,nocrlf,noforcehttps,nofakehttps
 scholar.google.com.cn = google_cn,nocrlf,noforcehttps,nofakehttps
