--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -37,8 +37,9 @@ options =
 vps =
 
 [parents]
-shadowsocks_0 = ss://aes-128-cfb:6Rc59g0jFlTppvel@155.254.32.50:8000
+; shadowsocks_0 = ss://method:password@hostname:port
 ; sslproxy_0 = https://user:pass@hostname:443
 ; sniproxy = sni://hostname:port
+; hxsocks = hxs://user:pass@hostname:port
 
 [hosts]
