--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -19,9 +19,9 @@ remoteapi = 0
 rproxy =
 
 [goagent]
-enable = 1
-gaeappid = c2tqh6xgh96|mzu5gx1heh2beebo2|niif7q7hukk3|niif7q7hukk3k
-gaepassword = heh2beebo2
+enable = 0
+gaeappid =
+gaepassword =
 mode = https
 ipv6 =
 sslversion =
