--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -42,5 +42,12 @@ vps =
 ; sniproxy = sni://hostname:port
 ; hxsocks = hxs://user:pass@hostname:port
 
+[dns]
+enable = 0
+listen = 127.0.0.1:53
+localserver = 114.114.114.114:53
+remoteserver = 8.8.8.8:53
+proxy = http://127.0.0.1:8118
+
 [hosts]
 ; www.360.cn = 127.0.0.1
