--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -45,8 +45,8 @@ vps =
 [dns]
 enable = 0
 listen = 127.0.0.1:53
-localserver = 114.114.114.114:53
-remoteserver = 8.8.8.8:53
+localdns = 114.114.114.114:53
+remotedns = 8.8.8.8:53
 proxy = http://127.0.0.1:8118
 
 [hosts]
