--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -9,6 +9,9 @@ logfile =
 enable = 1
 listen = 127.0.0.1:8118
 gfwlist = 1
+gfwlist_url = https://autoproxy-gfwlist.googlecode.com/svn/trunk/gfwlist.txt
+adblock = 0
+adblock_url = https://easylist-downloads.adblockplus.org/easylistchina+easylist.txt
 xheaders =
 region = cn
 profile =
