--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -48,8 +48,8 @@ vps =
 [dns]
 enable = 0
 listen = 127.0.0.1:53
-localdns = 223.5.5.5:53
-remotedns = 208.67.222.222:5353
+localdns =
+remotedns =
 
 [hosts]
 ; www.360.cn = 127.0.0.1
