--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -21,10 +21,10 @@ remoteapi = 0
 rproxy =
 
 [parents]
-; shadowsocks_0 = ss://method:password@hostname:port
-; sslproxy_0 = https://user:pass@hostname:443
-; sniproxy = sni://hostname:port
-; hxsocks = hxs://user:pass@hostname:port
+; proxy0 = ss://aes-256-cfb:password@127.0.0.1:8388
+; proxy1 = http://127.0.0.1:8086
+; proxy2 = http://user:pass@127.0.0.1:8087
+; proxy3 = socks5://127.0.0.1:1080
 
 [dns]
 enable = 0
