tcp port forward

--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -26,6 +26,11 @@ rproxy =
 ; proxy2 = http://user:pass@127.0.0.1:8087
 ; proxy3 = socks5://127.0.0.1:1080
 
+[port_forward]
+; name = proxy local remote
+; foo = ss://aes-256-cfb:password@127.0.0.1:8388 8080 3128
+; bar = ss://aes-256-cfb:password@127.0.0.1:8388 127.0.0.1:53 8.8.8.8:53
+
 [dns]
 enable = 0
 listen = 127.0.0.1:53
