--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -8,7 +8,7 @@ logfile =
 enable = 1
 listen = 127.0.0.1:8118
 gfwlist = 1
-gfwlist_url = https://autoproxy-gfwlist.googlecode.com/svn/trunk/gfwlist.txt
+gfwlist_url =
 adblock = 0
 adblock_url = https://easylist-downloads.adblockplus.org/easylistchina+easylist.txt
 xheaders =
