--- a/userconf.sample.ini
+++ b/userconf.sample.ini
@@ -25,6 +25,7 @@ rproxy =
 ; proxy1 = http://127.0.0.1:8086
 ; proxy2 = http://user:pass@127.0.0.1:8087
 ; proxy3 = socks5://127.0.0.1:1080
+; proxy4 = hxs://user:pass@127.0.0.1:1080
 
 [port_forward]
 ; name = proxy local remote
